# moxfield-analyzer-backend

./: .dockerignore  .env.example  .env.production  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/application/use_cases/: validate_deck.py
src/domain/services/: card_type_helper.py  kindred_wars_calculator.py  mana_curve_calculator.py
src/domain/services/tags/: tag_service.py
src/domain/services/tags/calculators/: base.py
src/domain/value_objects/: deck_url.py
src/infrastructure/http/: app.py
src/infrastructure/http/middleware/: error_handler.py
src/infrastructure/http/routes/: deck.py
src/infrastructure/playwright/: browser_pool.py
src/infrastructure/repositories/: card_mapper.py  commander_spellbook_repository.py  moxfield_deck_repository.py  scryfall_card_resolver.py
src/infrastructure/static_data/oracle_tags/: __init__.py  banned_cards.py  extra_turn.py  game_changer.py  mass_removal.py  reserved_list.py  tutor.py
src/infrastructure/utils/: cache.py  http_client.py  logger.py  metrics.py
src/shared/: exceptions.py
src/shared/models/: __init__.py  card.py  card_face.py  commander_spellbook.py  deck_details.py  kindred_wars.py  mana_curve.py  oracle_tag.py  tag_stats.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_card_mapper.py  test_commander_spellbook.py  test_deck_url.py  test_kindred_wars.py  test_mana_curve.py
