[project]
name = "moxfield-analyzer"
version = "1.0.0"
description = "Moxfield Deck Analyzer - Kindred Wars API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "playwright>=1.50",
    "pydantic>=2.10",
    "cachetools>=5.5",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "slowapi>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
